--- a/index.html
+++ b/index.html
@@ -8,6 +8,42 @@
     <title>Quackulator</title>
   </head>
   <body>
+    <div class="container">
+      <div class="calculator">
+        <div class="display">
+          1,234,567,890.12
+        </div>
+        <div class="buttons">
+          <div class="button-row">
+            <div class="button number">7</div>
+            <div class="button number">8</div>
+            <div class="button number">9</div>
+            <div class="button operator">-</div>
+          </div>
+          <div class="button-row">
+            <div class="button number">4</div>
+            <div class="button number">5</div>
+            <div class="button number">6</div>
+            <div class="button operator">+</div>
+          </div>
+          <div class="button-row">
+            <div class="button number">1</div>
+            <div class="button number">2</div>
+            <div class="button number">3</div>
+            <div class="button operator">/</div>
+          </div>
+          <div class="button-row">
+            <div class="button number zero">0</div>
+            <div class="button decimal">.</div>
+            <div class="button operator">*</div>
+          </div>
+          <div class="button-row">
+            <div class="button clear">C</div>
+            <div class="button equals">=</div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="./script.js"></script>
   </body>
 </html>
