--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           <div class="button-row">
             <div class="button number zero">0</div>
             <div class="button decimal">.</div>
+            <div class="button sign">±</div>
             <div class="button operator">*</div>
           </div>
           <div class="button-row">
